# hackable_diffusion

./: .gitignore  LOCAL_PATCHES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest_and_autopublish.yml
docs/: architecture.md  composable_guidance.md  corruption.md  index.md  inference.md  interpolant_refactor_plan.md  loss.md  multimodal.md  sampling.md  sitemap.md  training.md
hackable_diffusion/: __init__.py  hd.py
hackable_diffusion/kdiff/: __init__.py  core.py  core_test.py  data.py  evals.py
hackable_diffusion/kdiff/configs/: imagenet64_unet.py
hackable_diffusion/lib/: __init__.py  array_annotations.py  diffusion_network.py  diffusion_network_test.py  distributional.py  fast_random.py  fast_random_test.py  hd_typing.py  jax_helpers.py  jax_helpers_test.py  manifolds.py  manifolds_test.py  multimodal.py  multimodal_test.py  posterior.py  posterior_bridges_diagnostics.py  posterior_bridges_diagnostics_test.py  random_utils.py  test_helpers.py  test_utils.py  time_sampling.py  time_sampling_test.py  utils.py  utils_test.py
hackable_diffusion/lib/architecture/: __init__.py  arch_typing.py  arch_utils.py  attention.py  attention_test.py  conditioning_encoder.py  conditioning_encoder_test.py  discrete.py  discrete_test.py  distributional.py  dit.py  dit_blocks.py  dit_blocks_test.py  dit_test.py  mlp.py  mlp_blocks.py  mlp_blocks_test.py  mlp_test.py  normalization.py  normalization_test.py  posterior.py  riemannian.py  riemannian_test.py  sequence_embedders.py  sequence_embedders_test.py  simplicial.py  unet.py  unet_blocks.py  unet_blocks_test.py  unet_test.py
hackable_diffusion/lib/corruption/: __init__.py  _gaussian_legacy.py  _riemannian_legacy.py  base.py  (+19 more)
hackable_diffusion/notebooks/: 2d_distributional.ipynb  2d_training.ipynb  mnist.ipynb  mnist_discrete.ipynb  mnist_dit.ipynb  mnist_multimodal.ipynb  mnist_nn_and_nnx.ipynb  mnist_simplicial.ipynb
(+80 files in other folders)
